课文跟读，逐句阅读
课文跟读，逐句阅读

--- a/src/html/27_readText_课文跟读_1.html
+++ b/src/html/27_readText_课文跟读_1.html
@@ -147,8 +147,8 @@
           <img src="../img/readText-footer-img.png" alt="footer">
         </div>
         <div class="readText-footer-items">
-          <div class="readText-footer-item">在线时常<span class="time">02:00</span></div>
-          <div class="readText-footer-item">学习时长<span class="time">02:00</span></div>
+          <div class="readText-footer-item">在线时常<span class="time updateTime" time='120'></span></div>
+          <div class="readText-footer-item">学习时长<span class="time updateTime" time='60'></span></div>
           <div class="readText-footer-item">时间效率<span class="time">50%</span></div>
         </div>
         <div class="readText-pro">
