--- a/src/html/27_readText_课文跟读_2.html
+++ b/src/html/27_readText_课文跟读_2.html
@@ -26,46 +26,46 @@
   <![endif]-->
   <!-- build:head -->
   <header class="comm-header">
-  <div class="midd_header clearfix">
-    <div class="index_icon">
-      <a href="index.html"></a>
-    </div>
-    <ul class="nav clearfix">
-      <li class="active">
-        <a href="#">课程中心</a>
-      </li>
-      <li>
-        <a href="#">我的班级</a>
-      </li>
-      <li>
-        <a href="#">排行榜</a>
-      </li>
-      <li>
-        <a href="#">学币商城</a>
-      </li>
-    </ul>
-    <div class="login">
-      <a href="#">个人中心</a>
-      <ul class="head-list">
-        <li>
-          <a class="info" href='javascript:;'>个人资料</a>
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
         </li>
         <li>
-          <a class="honor" href='javascript:;'>荣誉中心</a>
+          <a href="#">我的班级</a>
         </li>
         <li>
-          <a class='test'href='javascript:;'>测试记录</a>
+          <a href="#">排行榜</a>
         </li>
         <li>
-          <a class="task" href='javascript:;'>我的任务</a>
-        </li>
-        <li>
-          <a class="logout" href='javascript:;'>退出登录</a>
+          <a href="#">学币商城</a>
         </li>
       </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+        <ul class="head-list">
+          <li>
+            <a class="info" href='javascript:;'>个人资料</a>
+          </li>
+          <li>
+            <a class="honor" href='javascript:;'>荣誉中心</a>
+          </li>
+          <li>
+            <a class='test' href='javascript:;'>测试记录</a>
+          </li>
+          <li>
+            <a class="task" href='javascript:;'>我的任务</a>
+          </li>
+          <li>
+            <a class="logout" href='javascript:;'>退出登录</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
   <!-- endbuild -->
 
 
@@ -95,18 +95,90 @@
           </div>
           <div class="pent-body">
             <div class="readText-box">
-              <p class="readText-item">郑和航海</p>
-              <p class="readText-item">郑和是一位著名的中国探险家。</p>
-              <p class="readText-item active">In 1405, he set off from China on the first of seven great voyages.</p>
-              <p class="readText-item">郑和航海</p>
-              <p class="readText-item">郑和是一位著名的中国探险家。</p>
-              <p class="readText-item">In 1405, he set off from China on the first of seven great voyages.</p>
-              <p class="readText-item">郑和航海</p>
-              <p class="readText-item">郑和是一位著名的中国探险家。</p>
-              <p class="readText-item">In 1405, he set off from China on the first of seven great voyages.</p>
-              <p class="readText-item">郑和航海</p>
-              <p class="readText-item">郑和是一位著名的中国探险家。</p>
-              <p class="readText-item">In 1405, he set off from China on the first of seven great voyages.</p>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">他的名字是迈克。</p>
+                <p class="readText-item english">His name's Mike.</p>
+                <audio class="readText-audio">
+                  <source src="../music/2.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">下午好！</p>
+                <p class="readText-item english">Good afternoon!</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">我的名字叫琳达。</p>
+                <p class="readText-item english">My name's Linda.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">你是海伦吗？</p>
+                <p class="readText-item english">Are you Helen?</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">对，我是。</p>
+                <p class="readText-item english">Yes,I am.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">见到你很高兴，琳达。</p>
+                <p class="readText-item english">Nice to meet you,Linda.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">我也是。</p>
+                <p class="readText-item english">Nice to meet you too.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">她叫什么名字？</p>
+                <p class="readText-item english">What's her name?</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">她是珍妮。</p>
+                <p class="readText-item english">She's Jane.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">他是杰克吗？</p>
+                <p class="readText-item english">Is he Jack?</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">不，他不是。</p>
+                <p class="readText-item english">No,he isn't.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
+              <div class="readText-box-item">
+                <p class="readText-item playBtn play">他的名字是迈克。</p>
+                <p class="readText-item english">His name's Mike.</p>
+                <audio class="readText-audio">
+                  <source src="../music/3.mp3" type="audio/mp3">
+                </audio>
+              </div>
             </div>
           </div>
         </div>
@@ -121,12 +193,8 @@
           <img src="../img/readText-footer-img.png" alt="footer">
         </div>
         <div class="readText-footer-items">
-          <div class="readText-footer-item">在线时常
-            <span class="time">02:00</span>
-          </div>
-          <div class="readText-footer-item">学习时长
-            <span class="time">02:00</span>
-          </div>
+          <div class="readText-footer-item">在线时常<span class="time updateTime" time='120'></span></div>
+          <div class="readText-footer-item">学习时长<span class="time updateTime" time='60'></span></div>
           <div class="readText-footer-item">时间效率
             <span class="time">50%</span>
           </div>
