--- a/src/html/27_readText_课文跟读_1.html
+++ b/src/html/27_readText_课文跟读_1.html
@@ -26,46 +26,46 @@
   <![endif]-->
   <!-- build:head -->
   <header class="comm-header">
-  <div class="midd_header clearfix">
-    <div class="index_icon">
-      <a href="index.html"></a>
-    </div>
-    <ul class="nav clearfix">
-      <li class="active">
-        <a href="#">课程中心</a>
-      </li>
-      <li>
-        <a href="#">我的班级</a>
-      </li>
-      <li>
-        <a href="#">排行榜</a>
-      </li>
-      <li>
-        <a href="#">学币商城</a>
-      </li>
-    </ul>
-    <div class="login">
-      <a href="#">个人中心</a>
-      <ul class="head-list">
-        <li>
-          <a class="info" href='javascript:;'>个人资料</a>
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
         </li>
         <li>
-          <a class="honor" href='javascript:;'>荣誉中心</a>
+          <a href="#">我的班级</a>
         </li>
         <li>
-          <a class='test'href='javascript:;'>测试记录</a>
+          <a href="#">排行榜</a>
         </li>
         <li>
-          <a class="task" href='javascript:;'>我的任务</a>
-        </li>
-        <li>
-          <a class="logout" href='javascript:;'>退出登录</a>
+          <a href="#">学币商城</a>
         </li>
       </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+        <ul class="head-list">
+          <li>
+            <a class="info" href='javascript:;'>个人资料</a>
+          </li>
+          <li>
+            <a class="honor" href='javascript:;'>荣誉中心</a>
+          </li>
+          <li>
+            <a class='test' href='javascript:;'>测试记录</a>
+          </li>
+          <li>
+            <a class="task" href='javascript:;'>我的任务</a>
+          </li>
+          <li>
+            <a class="logout" href='javascript:;'>退出登录</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
   <!-- endbuild -->
 
 
@@ -92,24 +92,48 @@
             <div class="pent-close"><img src="../img/readText-close.png" alt="关闭"></div>
           </div>
           <div class="pent-body">
-              <div class="xc-proplay">
-                  <audio class="audioMp3list">
-                    <source src="../music/3.mp3" type="audio/mp3">
-                  </audio>
-                  <audio class="audioMp3list">
-                    <source src="../music/2.mp3" type="audio/mp3">
-                  </audio>
-                  <audio class="audioMp3list">
-                    <source src="../music/3.mp3" type="audio/mp3">
-                  </audio>
-                  <audio class="audioMp3list">
-                    <source src="../music/2.mp3" type="audio/mp3">
-                  </audio>
-                  <div class="xc-proplay-btns">
-                    <span class="xc-proplay-img toogleloop"></span>
-                    <span class="xc-proplay-img tooglePlayBtn play"></span>
-                  </div>
-                </div>
+            <div class="xc-proplay">
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/492bad489eb0.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190127/f9c17ef0c0a6.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/0b691e6a778a.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/e854f1f4270c.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/723be63eeec0.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/a6ac11429efd.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/32bddd26e9aa.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/1455efd246d9.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/732dab4f62fc.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/68be948a2bb6.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/902d64425761.wav"
+                  type="audio/mp3"></audio>
+              <audio class="audioMp3list">
+                <source src="http://zxfenglish.oss-cn-zhangjiakou.aliyuncs.com/audio/x-wav/20190125/8b951574fd42.wav"
+                  type="audio/mp3"></audio>
+              <div class="xc-proplay-btns">
+                <span class="xc-proplay-img toogleloop"></span>
+                <span class="xc-proplay-img tooglePlayBtn play" src="/static/home/img/img/readText-play.png">
+                </span></div>
+            </div>
             <!-- <div class="readText-btns">
               <div class="readText-loop"><img class='btn-img' src="../img/readText-loop.png" alt="循环播放">循环播放</div>
               <div class="readText-play"><img class='btn-img' src="../img/readText-play.png" alt="播放">播放</div>
@@ -117,22 +141,18 @@
               <div class="readText-play"><img class='btn-img' src="../img/readText-play-active.png" alt="播放">播放</div>
             </div> -->
             <div class="readText-box">
+              <p class="readText-item">His name's Mike.</p>
+              <p class="readText-item">Good afternoon!</p>
+              <p class="readText-item">My name's Linda.</p>
               <p class="readText-item">Are you Helen?</p>
-              <p class="readText-item">Yes, I am.</p>
-              <p class="readText-item">Nice to meet you, too.</p>
-              <p class="readText-item">This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America. This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America.</p>
-              <p class="readText-item">Are you Helen?</p>
-              <p class="readText-item">Yes, I am.</p>
-              <p class="readText-item">Nice to meet you, too.</p>
-              <p class="readText-item">This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America. This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America.</p>
-              <p class="readText-item">Are you Helen?</p>
-              <p class="readText-item">Yes, I am.</p>
-              <p class="readText-item">Nice to meet you, too.</p>
-              <p class="readText-item">This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America. This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America.</p>
-              <p class="readText-item">Are you Helen?</p>
-              <p class="readText-item">Yes, I am.</p>
-              <p class="readText-item">Nice to meet you, too.</p>
-              <p class="readText-item">This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America. This was nearly a century before Christopher Columbus first set sail on his journey of discovery to America.</p>
+              <p class="readText-item">Yes,I am.</p>
+              <p class="readText-item">Nice to meet you,Linda.</p>
+              <p class="readText-item">Nice to meet you too.</p>
+              <p class="readText-item">What's her name?</p>
+              <p class="readText-item">She's Jane.</p>
+              <p class="readText-item">Is he Jack?</p>
+              <p class="readText-item">No,he isn't.</p>
+              <p class="readText-item">His name's Mike.</p>
             </div>
           </div>
         </div>
@@ -163,7 +183,7 @@
           </div>
           <div class="readText-footer-btns">
             <div class="readText-footer-btn next">
-                <a href="javascript:;">下一步<img class="readText-footer-btnImg" src="../img/readText-footer-next.png" alt="下一步"></a>
+              <a href="javascript:;">下一步<img class="readText-footer-btnImg" src="../img/readText-footer-next.png" alt="下一步"></a>
             </div>
           </div>
         </div>
