--- a/src/html/27_readText_课文跟读_3.html
+++ b/src/html/27_readText_课文跟读_3.html
@@ -97,9 +97,12 @@
             <div class="readText-box">
               <div class="readText-sentence">
                 <div class="readText-listen">
+                  <audio class="audioType1">
+                    <source src="../music/3.mp3" type="audio/mp3">
+                  </audio>
                   <!-- 再点击时候更换img地址 -->
                   <!-- <img class="readText-listen-img" src="../img/sentence-radio-active.png" alt="听"> -->
-                  <img class="readText-listen-img" src="../img/sentence-radio.png" alt="听">点击或按ctrl重听
+                  <img class="readText-listen-img tooglePlay play" src="../img/sentence-radio.png" alt="听"><span>点击播放语音</span>
                 </div>
                 <div class="readText-write" id="readText-write"><div class="readText-write-item"><input type="text"/></div><div class="readText-write-item"><input type="text" /></div><div class="readText-write-item"><input type="text" /></div><span class="h1">？</span><span class="readText-write-btn">重置</span></div>
                 <div class="readText-example">
