--- a/src/html/24_setence_combining_看字组句.html
+++ b/src/html/24_setence_combining_看字组句.html
@@ -108,9 +108,9 @@
                   </div>
                   <div class="input-wp">
                     <!-- 如果答案错误 给对应的input加err-ipt类名 -->
-                    <input type="text" class="ipt iptReviewWord" value="" tip='How' disabled>
-                    <input type="text" class="ipt iptReviewWord" value="" tip='are' disabled>
-                    <input type="text" class="ipt iptReviewWord" value="" tip='you' disabled>
+                    <input type="text" class="ipt iptReviewWord" value="" tip='How'>
+                    <input type="text" class="ipt iptReviewWord" value="" tip='are'>
+                    <input type="text" class="ipt iptReviewWord" value="" tip='you'>
                     <span class="quertion-txt">?</span>
                     <i class="default-icon" id="iptReviewShowresult"></i>
                     <a href="javascript:;" class="reset-btn"><i class="reset-icon"></i>重置</a>
