--- a/src/html/27_readText_课文跟读_3.html
+++ b/src/html/27_readText_课文跟读_3.html
@@ -106,13 +106,13 @@
                 </div>
                 <div class="readText-write" id="readText-write">
                   <div class="readText-write-item">
-                    <input type="text" class="ipt iptReviewWord" tip='How'/>
+                    <input type="text" class="ipt iptReviewWord" tip='How' disabled/>
                   </div>
                   <div class="readText-write-item">
-                    <input type="text" class="ipt iptReviewWord" tip='are'/>
+                    <input type="text" class="ipt iptReviewWord" tip='are' disabled/>
                   </div>
                   <div class="readText-write-item">
-                    <input type="text" class="ipt iptReviewWord" tip='you'/>
+                    <input type="text" class="ipt iptReviewWord" tip='you' disabled/>
                   </div>
                   <span class="h1">？</span>
                   <span class="readText-write-btn">重置</span>
