--- a/src/html/27_readText_课文跟读_3.html
+++ b/src/html/27_readText_课文跟读_3.html
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="pent-body">
-            <div class="readText-box">
+            <div class="readText-box text-center">
               <div class="readText-sentence">
                 <div class="readText-listen">
                   <audio class="audioType1">
